Corrected background image visibility in .service

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -15,6 +15,9 @@
     .footer-nav {
       display: flex;
       justify-content: space-around;
+      .navlink-wrapper {
+        cursor: pointer;
+      }
     }
     .contact-info {
       margin-block: 3rem;
